--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -29,22 +29,42 @@ header {
     center/cover no-repeat fixed;
 }
 
+
 #main_nav {
   background-color: transparent;
   height: 7rem;
   width: 100%;
   position: fixed;
   top: 0;
+  z-index: 2;
 }
 
 #hero-banner {
-  color: #efd197;
-  padding-top: 40vh;
-  text-align: center;
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  padding-top: 45vh;
+}
+
+#hero-banner::after {
+  content: "";
+  position:absolute;
+  height: 90%;
+  width: 100%;
+  border-radius: 5px;
+  background-color: rgba(10, 10, 10, 0.40);
+  -webkit-filter: blur(80px);
+  -moz-filter: blur(80px);
+  -o-filter: blur(80px);
+  -ms-filter: blur(80px);
+  filter: blur(80px);
 }
 
 header h1 {
   font-size: 3.7rem;
+  color: #efd197;
+  z-index: 1;
 }
 
 header nav ul {
@@ -61,6 +81,10 @@ header li {
 header a {
   color: #95c490;
   text-decoration: none;
+}
+
+header a:hover {
+  color:#e8e2c6;
 }
 
 /* Main area */
@@ -108,7 +132,7 @@ main h2 {
 
 #past .box a {
   text-decoration: none;
-  color:#95c490;
+  color: #95c490;
 }
 
 #past .box a:hover {
@@ -116,12 +140,69 @@ main h2 {
   color: #497354;
 }
 
-#present img,
-#future img {
+/* Experience / Present */
+
+#present img {
   float: left;
   margin-top: 1rem;
   margin-right: 1rem;
   border-radius: 3px;
+}
+
+/* Skills / Future */
+
+#future .skill_boxes {
+  display: flex;
+}
+
+#future .box {
+  background-color: white;
+  height: 25vh;
+  width: 15%;
+  margin-right: 1rem;
+  padding: 2rem 0 0 2rem;
+  border-radius: 3px;
+  box-shadow: 0 0 5px #aeaeae;
+}
+
+#future .box:hover {
+  box-shadow: 0 0 25px #8a8a8a;
+}
+
+#future i {
+  padding-bottom: 2rem;
+}
+
+.progressbar {
+  background: transparent;
+  border-style: solid;
+  border-width: 2.5px;
+  border-radius: 13px;
+  height: 25px;
+  width: 150px;
+  padding: 2px;
+}
+
+.progressbar:after {
+  content: "";
+  display: block;
+  background: #efd197;
+  height: 100%;
+  width: 0%;
+  border-radius: 9px;
+}
+
+#bar1:after {
+  width: 40%;
+}
+#bar2:after {
+  width: 50%;
+}
+#bar3:after {
+  width: 35%;
+}
+#bar4:after {
+  width: 40%;
 }
 
 /* Footer area */
@@ -172,7 +253,11 @@ footer form button {
   color: black;
   margin-left: 10.22rem;
   font-size: inherit;
-  box-shadow: 0 0 5px #134038;
+  box-shadow: 0 0 10px #134038;
+}
+
+footer form button:hover {
+  box-shadow: 0 0 25px #134038;
 }
 
 #copywright {
