--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -246,6 +246,7 @@ footer form .form-group textarea {
 }
 
 footer form button {
+  display: inline-block;
   background-color: #efd197;
   border-radius: 3px;
   border: none;
@@ -258,6 +259,19 @@ footer form button {
 
 footer form button:hover {
   box-shadow: 0 0 25px #134038;
+}
+
+#backToTop {
+  position: fixed;
+  bottom: 2rem;
+  right: 2rem;
+  color: #95c490;
+  background: transparent;
+  border: none;
+}
+
+#backToTop:hover {
+  color:#497354;
 }
 
 #copywright {
