--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -24,7 +24,7 @@ header {
   background-color: #134038;
   height: 100vh;
   width: 100%;
-  margin-bottom: 7rem;
+  margin-bottom: 5rem;
   background: url("https://source.unsplash.com/WajET_vzPmI/1600x900") center
     center/cover no-repeat fixed;
 }
@@ -90,7 +90,7 @@ header a:hover {
 /* Main area */
 
 main h2 {
-  padding-bottom: 3rem;
+  padding-bottom: 2rem;
 }
 
 #past,
@@ -108,7 +108,7 @@ main h2 {
 #past .past_boxes {
   display: flex;
   justify-content: space-between;
-  margin-top: 1rem;
+  /* margin-top: 1rem; */
 }
 
 #past .box {
@@ -125,7 +125,6 @@ main h2 {
 }
 
 #past .box img {
-  height: 74%;
   width: 100%;
   border-radius: 3px;
 }
@@ -144,7 +143,7 @@ main h2 {
 
 #present img {
   float: left;
-  margin-top: 1rem;
+  /* margin-top: 1rem; */
   margin-right: 1rem;
   border-radius: 3px;
 }
@@ -179,7 +178,7 @@ main h2 {
   border-width: 2.5px;
   border-radius: 13px;
   height: 25px;
-  width: 150px;
+  width: 7rem;
   padding: 2px;
 }
 
@@ -271,7 +270,7 @@ footer form button:hover {
 }
 
 #backToTop:hover {
-  color:#497354;
+  color:#efd197;
 }
 
 #copywright {
@@ -291,7 +290,7 @@ footer form button:hover {
 
 @media (max-width: 576px) {
   body {
-    background-color: #e8e2c6;
+    background-color: white;
   }
 
   header {
@@ -308,14 +307,10 @@ footer form button:hover {
 
   header h1 {
     font-size: 6vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    text-align: center;
   }
 
-  #past img,
-  #present img,
-  #future img {
+  #present img {
     float: none;
     display: flex;
     align-items: center;
@@ -327,11 +322,53 @@ footer form button:hover {
   #past,
   #present,
   #future {
+    padding-top: 1rem;
     padding-right: 1rem;
     padding-bottom: 0.5rem;
     padding-left: 1rem;
     min-height: 20rem;
     text-align: left;
+  }
+
+  #past .past_boxes {
+    display: block;
+  }
+
+  #past .box {
+    margin-bottom: 1.5rem;
+    height: 50vh;
+    width: 100%;
+  }
+
+  #future .skill_boxes {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  #future .box {
+    height: 25vh;
+    width: 47%;
+    margin: 0 0 1rem 0;
+    padding: 1rem 0 0 0rem;
+  }
+
+  .progressbar {
+    height: 18px;
+    width: 80%;
+    margin: 0 0.5rem 0 0.5rem;
+  }
+
+  #future i {
+    padding-bottom: 1rem;
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #future i::before {
+    font-size: 56px;
   }
 
   footer {
@@ -354,5 +391,13 @@ footer form button:hover {
   footer form button {
     width: 100%;
     margin: 0;
+  }
+
+  #backToTop {
+    bottom: 0.5rem;
+    right: 0.5rem;
+  }
+  footer i::before {
+    font-size: 24px;
   }
 }
