gallery page added

--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -1,17 +1,20 @@
+:root {
+  --font: "Montserrat", sans-serif;
+  --lightGreen: #95c490
+}
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+html {
+  scroll-behavior: smooth;
+}
 
 body {
   background-color: white;
-  font-family: "Montserrat", sans-serif;
+  font-family: var(--font);
   color: black;
-}
-
-html {
-  scroll-behavior: smooth;
 }
 
 p {
@@ -21,22 +24,25 @@ p {
 /* Header area */
 
 header {
-  background-color: #134038;
-  height: 100vh;
-  width: 100%;
   margin-bottom: 5rem;
-  background: url("https://source.unsplash.com/WajET_vzPmI/1600x900") center
-    center/cover no-repeat fixed;
 }
-
 
 #main_nav {
   background-color: transparent;
-  height: 7rem;
+  height: 6rem;
   width: 100%;
   position: fixed;
   top: 0;
   z-index: 2;
+}
+
+.bg {
+  background-color: #134038b3;
+  transition: all .5s;
+}
+
+.bg #navUl {
+  padding: 1%;
 }
 
 #hero-banner {
@@ -44,16 +50,21 @@ header {
   position: relative;
   justify-content: center;
   align-items: center;
-  padding-top: 45vh;
+  padding-top: 0;
+  background-color: #134038;
+  height: 100vh;
+  width: 100%;
+  background: url("https://source.unsplash.com/WajET_vzPmI/1600x900") center
+    center/cover no-repeat fixed;
 }
 
 #hero-banner::after {
   content: "";
   position:absolute;
-  height: 90%;
+  height: 60%;
   width: 100%;
   border-radius: 5px;
-  background-color: rgba(10, 10, 10, 0.40);
+  background-color: rgba(10, 10, 10, 0.4);
   -webkit-filter: blur(80px);
   -moz-filter: blur(80px);
   -o-filter: blur(80px);
@@ -74,17 +85,19 @@ header nav ul {
 
 header li {
   display: inline-block;
-  margin-right: 0.7rem;
-  margin-left: 0.7rem;
+padding: 0 1rem;
 }
 
-header a {
-  color: #95c490;
+header nav a {
+  color: var(--lightGreen);
   text-decoration: none;
+  transition: all .5s;
+  font-size: 20px;
 }
 
-header a:hover {
+header nav a:hover {
   color:#e8e2c6;
+  font-size:24px;
 }
 
 /* Main area */
@@ -118,6 +131,7 @@ main h2 {
   padding: 1rem;
   border-radius: 3px;
   box-shadow: 0 0 5px #aeaeae;
+  transition: box-shadow .5s;
 }
 
 #past .box:hover {
@@ -162,6 +176,7 @@ main h2 {
   padding: 2rem 0 0 2rem;
   border-radius: 3px;
   box-shadow: 0 0 5px #aeaeae;
+  transition: box-shadow .5s;
 }
 
 #future .box:hover {
@@ -202,6 +217,72 @@ main h2 {
 }
 #bar4:after {
   width: 40%;
+}
+
+/* Gallery */
+
+#gallery {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 7vh;
+}
+
+.gallery-grid {
+  display: grid;
+  grid-template-columns: repeat(6, 150px);
+  grid-template-rows: repeat(5, 150px);
+  grid-template-areas:
+  "a a b b c c"
+  "a a d d c c"
+  "e h h h c c"
+  "f h h h i i"
+  "g h h h i i";
+  grid-gap: 0.5rem;
+  position: relative;
+}
+.grid-div {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.grid-item {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.grid-item:hover {
+  transform: scale(1.05);
+}
+
+.grid-item-1 {
+  grid-area: a;
+}
+.grid-item-2 {
+  grid-area: c;
+}
+.grid-item-3 {
+  grid-area: b;
+}
+.grid-item-4 {
+  grid-area: d;
+}
+.grid-item-5 {
+  grid-area: e;
+}
+.grid-item-6 {
+  grid-area: f;
+}
+.grid-item-7 {
+  grid-area: g;
+}
+.grid-item-8 {
+  grid-area: h;
+}
+.grid-item-9 {
+  grid-area: i;
 }
 
 /* Footer area */
