--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -27,7 +27,7 @@ header {
   margin-bottom: 5rem;
 }
 
-#main_nav {
+#header_nav {
   background-color: transparent;
   height: 6rem;
   width: 100%;
